objects/Opportunity_Product__c.object
<CustomObject>
    <description>This object tracks the Opportunity Product under Opportunity</description>
    <fields>
        <fullName>Application_Number__c</fullName>
        <externalId>true</externalId>
        <label>Application Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BA_Prosaving__c</fullName>
        <label>BA Prosaving</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BA_Protection__c</fullName>
        <label>BA Protection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Front_End_Fee__c</fullName>
        <label>Front End Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>ตั้งวงเงินทั้งหมดในครั้งแรก</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>แยกตั้งครั้งที่ 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>แยกตั้งครั้งที่ 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>แยกตั้งครั้งที่ 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>แยกตั้งครั้งที่ 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>แยกตั้งครั้งที่ 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Setup_Amount__c</fullName>
        <label>Setup Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Setup_Date__c</fullName>
        <label>Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Setup</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opportunity Product</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Products</pluralLabel>
    <recordTypes>
        <fullName>Closed_Opp_Product</fullName>
        <active>true</active>
        <description>User not allow to edit any information in opp product</description>
        <label>Closed Opp Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_Opp_Product</fullName>
        <active>true</active>
        <description>User will be able to edit opp product information</description>
        <label>Open Opp Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Can_Input_BA_at_First_Setup_Only</fullName>
        <active>true</active>
        <description>กรอก BA ได้เฉพาะตอนตั้งวงเงินครั้งแรกเท่านั้น</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Product__c,&apos;ตั้งวงเงินทั้งหมดในครั้งแรก&apos;)),NOT(ISPICKVAL(Product__c,&apos;แยกตั้งครั้งที่ 1&apos;)),OR(BA_Prosaving__c &lt;&gt; 0,BA_Protection__c &lt;&gt; 0))</errorConditionFormula>
        <errorMessage>กรอก BA ได้เฉพาะตอนตั้งวงเงินครั้งแรกเท่านั้น</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Create_Opportunity_Product</fullName>
        <active>true</active>
        <description>Cannot Create Product. Stage need to be in: &apos;Waiting for Credit Setup&apos;</description>
        <errorConditionFormula>AND(NOT( TEXT(Opportunity__r.StageName) = &quot;Waiting for Credit Setup&quot;),NOT( TEXT(Opportunity__r.StageName) = &quot;Partial Loan Setup&quot;))</errorConditionFormula>
        <errorMessage>Cannot Create Product. Stage need to be in: &apos;Waiting for Credit Setup&apos; or &apos;Partial Loan Setup&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_change_status_to_Setup</fullName>
        <active>true</active>
        <description>Not allow to change status to Setup if Setup Amount is equal to null or zero</description>
        <errorConditionFormula>TEXT(Status__c) = &quot;Setup&quot; &amp;&amp; 
(ISNULL(Setup_Amount__c) ||
ISNULL(Setup_Date__c))</errorConditionFormula>
        <errorMessage>Please input Setup Amount and Setup Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_setup_future_date</fullName>
        <active>true</active>
        <errorConditionFormula>Setup_Date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Setup_Date__c</errorDisplayField>
        <errorMessage>ไม่สามารถตั้งวงเงินล่วงหน้าได้</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_Allow_Edit_Product_of_Closed_Opp</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(Opportunity__r.StageName,&apos;All Loan Setup&apos;) || ISPICKVAL(Opportunity__r.StageName,&apos;Auto Closed&apos;) || ISPICKVAL(Opportunity__r.StageName,&apos;Closed Lost&apos;)) &amp;&amp; (ISCHANGED(Product__c) || ISCHANGED(Status__c) || ISCHANGED(Requested_Amount__c) || ISCHANGED(Approved_Amount__c) || ISCHANGED(Setup_Amount__c) || ISCHANGED(Setup_Date__c) || ISCHANGED(Front_End_Fee__c))</errorConditionFormula>
        <errorMessage>Unable to edit Opportunity Product if the related Opportunity was closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Setup_Amount_more_than_Approved_Amount</fullName>
        <active>false</active>
        <errorConditionFormula>Setup_Amount__c &gt; Approved_Amount__c</errorConditionFormula>
        <errorDisplayField>Setup_Amount__c</errorDisplayField>
        <errorMessage>Setup Amount cannot be more than Approved Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Setup_Amount_must_be_not_zero</fullName>
        <active>true</active>
        <description>วงเงินที่ตั้งห้ามเป็น 0</description>
        <errorConditionFormula>Setup_Amount__c =0</errorConditionFormula>
        <errorDisplayField>Setup_Amount__c</errorDisplayField>
        <errorMessage>วงเงินที่ตั้งห้ามเป็น 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Setup_FrontEndFee_BA_NotNull</fullName>
        <active>true</active>
        <description>When status = Setup if Front End Fee, BA Prosaving, BA Protection is null</description>
        <errorConditionFormula>TEXT(Status__c) = &quot;Setup&quot; &amp;&amp; 
(ISNULL( Front_End_Fee__c ) ||
ISNULL( BA_Prosaving__c ) ||
ISNULL(  BA_Protection__c  ))</errorConditionFormula>
        <errorDisplayField>Front_End_Fee__c</errorDisplayField>
        <errorMessage>กรุณากรอก  Front End Fee และ เบี้ย BA Prosaving / BA Protection หากไม่มีการเก็บให้ใส่ 0
*** เบี้ย BA Prosaving and BA Protection ให้กรอกเฉพาะตอนตั้งวงเงินครั้งแรกเท่านั้น</errorMessage>
    </validationRules>
</CustomObject>